[package]
name = "ics23"
version = "0.8.0-alpha"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
exclude = ["codegen"]
description = "Merkle proof verification library - implements Cosmos ICS23 Spec"
repository = "https://github.com/confio/ics23/tree/master/rust"
license = "Apache-2.0"
rust-version = "1.56.1"

[workspace]
members = ["codegen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
prost = { version = "0.10", default-features = false, features = ["prost-derive"] }
bytes = { version = "1.0.1", default-features = false }
hex = { version = "0.4.3", default-features = false, features = [ "alloc" ] }
anyhow = { version = "1.0.40", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.22", default-features = false }
sha2 = { version = "0.9.3", optional = true }
sha3 = { version = "0.9.1", optional = true }
ripemd160 = { version = "0.9.1", optional = true }
sp-core = { version = "6.0.0", optional = true }

[dev-dependencies]
sha2 = { version = "0.9.3" }
sha3 = { version = "0.9.1" }
ripemd160 = { version = "0.9.1" }
sp-core = { version = "6.0.0" }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"

[features]
default = ["std"]
std = [
    "prost/std",
    "bytes/std",
    "hex/std",
    "anyhow/std",
    "sp-std/std",
    "sha2",
    "sha3",
    "ripemd160",
    "sp-core",
]
