[package]
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
description = "Merkle proof verification library - implements Cosmos ICS23 Spec"
edition = "2021"
exclude = ["codegen", "no-std-check"]
license = "Apache-2.0"
name = "ics23"
repository = "https://github.com/cosmos/ics23/tree/master/rust"
rust-version = "1.56.1"
version = "0.9.0"

[workspace]
members = ["codegen", "no-std-check"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = {version = "1.0.40", default-features = false}
bytes = {version = "1.0.1", default-features = false}
hex = {version = "0.4.3", default-features = false, features = ["alloc"]}
prost = {version = "0.11", default-features = false, features = ["prost-derive"]}
ripemd = {version = "0.1.1", optional = true, default-features = false}
sha2 = {version = "0.10.2", optional = true, default-features = false}
sha3 = {version = "0.10.2", optional = true, default-features = false}
blake3 = {version = "1.3.3", default-features = false}

[dev-dependencies]
ripemd = {version = "0.1.1"}
serde = {version = "1.0.125", features = ["derive"]}
serde_json = {version = "1.0.64"}
sha2 = {version = "0.10.2"}
sha3 = {version = "0.10.2"}

[features]
default = ["std", "host-functions"]
host-functions = [
  "sha2",
  "sha3",
  "ripemd",
]
std = [
  "prost/std",
  "bytes/std",
  "hex/std",
  "anyhow/std",
]
