[package]
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
description = "Merkle proof verification library - implements Cosmos ICS23 Spec"
edition = "2021"
exclude = ["codegen", "no-std-check"]
license = "Apache-2.0"
name = "ics23"
repository = "https://github.com/cosmos/ics23/tree/master/rust"
rust-version = "1.60"
version = "0.11.2"

[workspace]
members = ["codegen", "no-std-check"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = {version = "1.0.40", default-features = false}
blake2 = {version = "0.10.6", optional = true, default-features = false}
blake3 = {version = "1.5.0", optional = true, default-features = false}
bytes = {version = "1.0.1", default-features = false}
hex = {version = "0.4.3", default-features = false, features = ["alloc"]}
prost = {version = "0.13", default-features = false, features = ["prost-derive"]}
ripemd = {version = "0.1.1", optional = true, default-features = false}
sha2 = {version = "0.10.2", optional = true, default-features = false}
sha3 = {version = "0.10.2", optional = true, default-features = false}
serde = {version = "1.0", optional = true, default-features = false}
informalsystems-pbjson = { version = "0.7.0", optional = true, default-features = false }

[dev-dependencies]
blake2 = {version = "0.10.6"}
blake3 = {version = "1.5.0"}
ripemd = {version = "0.1.1"}
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0.64"}
sha2 = {version = "0.10.2"}
sha3 = {version = "0.10.2"}

[features]
default = ["std", "host-functions"]

std = ["prost/std", "bytes/std", "hex/std", "anyhow/std", "informalsystems-pbjson/std", "serde/std"]

host-functions = ["sha2", "sha3", "ripemd", "blake2", "blake3"]

serde = ["dep:serde", "informalsystems-pbjson"]
