[package]
name = "codegen"
version = "0.1.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
prost = "0.11"
prost-build = "0.11"
pbjson-build = { version = "0.5.1", features = ["no_std_serde"], git = "https://github.com/DaviRain-Su/pbjson.git", branch = "enable-no-std-serde"}
