[package]
name = "codegen"
version = "0.1.1"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
prost = "0.14.1"
prost-build = "0.14.1"
informalsystems-pbjson-build = "0.7.0"
